--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -43,12 +43,20 @@
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
 				<div class="misc vcard">
-					<h4>about</h4>
+          <!-- AddThis Follow BEGIN -->
+          <p>Follow Me</p>
+          <div class="addthis_toolbox addthis_32x32_style
+            addthis_vertical_style">
+            <a class="addthis_button_twitter_follow"
+              addthis:userid="nblumoe"></a>
+            <a class="addthis_button_google_follow"
+              addthis:userid="108620647514621362580"></a>
+            <a class="addthis_button_rss_follow"
+              addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
+          </div>
+          <!-- AddThis Follow END -->
 					<ul>
-            <li class="github"><a href="{{ site.author.googleplus }}" rel="me">Google+</a></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github</a></li>
-						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter</a></li>
-						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">Subscribe to RSS Feed</a></li>
 					</ul>
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
