Addthis toolbox footer position fixed

--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -842,6 +842,7 @@ pre {
   .the-footer .unit-inner h4,
   .the-footer .unit-inner h5,
   .the-footer .unit-inner p,
+  .the-footer .unit-inner .addthis_toolbox,
   .the-footer .unit-inner ul,
   .the-footer .unit-inner ol,
   .the-footer .unit-inner dl,
