Github logo added to follow section

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -53,11 +53,12 @@
               addthis:userid="108620647514621362580"></a>
             <a class="addthis_button_rss_follow"
               addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
+            <a href="http://github.com/{{ site.author.github }}/" rel="me">
+              <img src="/assets/images/logos/octocat.png"/>
+              <span>github</span>
+            </a>
           </div>
           <!-- AddThis Follow END -->
-					<ul>
-						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github</a></li>
-					</ul>
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
