Added author attribute to google+link

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -49,11 +49,11 @@
             addthis_vertical_style">
             <a class="addthis_button_twitter_follow"
               addthis:userid="nblumoe"></a>
-            <a class="addthis_button_google_follow"
+            <a rel="author" class="addthis_button_google_follow"
               addthis:userid="108620647514621362580"></a>
             <a class="addthis_button_rss_follow"
               addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
-            <a href="http://github.com/{{ site.author.github }}/" rel="me">
+            <a href="http://github.com/{{ site.author.github }}/">
               <img src="/assets/images/logos/octocat.png"/>
               <span>github</span>
             </a>
