Test new author link

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -57,6 +57,8 @@
               <img src="/assets/images/logos/octocat.png"/>
               <span>github</span>
             </a>
+            <a
+              href="https://plus.google.com/108620647514621362580?rel=author">g+</a>
           </div>
           <!-- AddThis Follow END -->
 				</div><!-- misc -->
