Added author param to addthis link

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -50,15 +50,13 @@
             <a class="addthis_button_twitter_follow"
               addthis:userid="nblumoe"></a>
             <a rel="author" class="addthis_button_google_follow"
-              addthis:userid="108620647514621362580"></a>
+              addthis:userid="108620647514621362580?rel=author"></a>
             <a class="addthis_button_rss_follow"
               addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
             <a href="http://github.com/{{ site.author.github }}/">
               <img src="/assets/images/logos/octocat.png"/>
               <span>github</span>
             </a>
-            <a
-              href="https://plus.google.com/108620647514621362580?rel=author">g+</a>
           </div>
           <!-- AddThis Follow END -->
 				</div><!-- misc -->
