Enable author link without JS

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -49,7 +49,8 @@
             addthis_vertical_style">
             <a class="addthis_button_twitter_follow"
               addthis:userid="nblumoe"></a>
-            <a class="addthis_button_google_follow"
+            <a href="https://plus.google.com/108620647514621362580?rel=author"
+              class="addthis_button_google_follow"
               addthis:userid="108620647514621362580?rel=author"></a>
             <a class="addthis_button_rss_follow"
               addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
