--- a/_includes/themes/the-minimum/home.html
+++ b/_includes/themes/the-minimum/home.html
@@ -30,10 +30,10 @@
                   </div><!-- entry-content -->
                 </div><!-- bd -->
                 <p class="gotop">
-                  <a href='#portfolio'>Portfolio</a>
                   <a href='#expertise'>Expertise</a>
                   <a href='#hire_me'>Hire me</a>
                   <a href='#contact'>Contact</a>
+                  <a href='/blog'>Blog</a>
                   <a id='gotop-link' href="#home">Back to Top</a>
                 </p>
 
