Added authorship hint for google

--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -39,6 +39,7 @@
 							<span class="month"><abbr>{{ page.date | date: '%B' }}</abbr></span>
 							<span class="day">{{ page.date | date: '%d' }}</span>
 							<span class="year">{{ page.date | date: '%Y' }}</span>
+              <span>by Nils Blum-Oeste</span>
 							</date>
 						</p>
 						<ul class="list-category list-linear">
