--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -43,23 +43,6 @@
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
 				<div class="misc vcard">
-          <!-- AddThis Follow BEGIN -->
-          <p>Follow Me</p>
-          <div class="addthis_toolbox addthis_32x32_style
-            addthis_vertical_style">
-            <a class="addthis_button_twitter_follow"
-              addthis:userid="nblumoe"></a>
-            <a href="https://plus.google.com/108620647514621362580?rel=author"
-              class="addthis_button_google_follow"
-              addthis:userid="108620647514621362580?rel=author"></a>
-            <a class="addthis_button_rss_follow"
-              addthis:url="http://feeds.feedburner.com/nils-blum-oeste?format=xml"></a>
-            <a href="http://github.com/{{ site.author.github }}/">
-              <img src="/assets/images/logos/octocat.png"/>
-              <span>github</span>
-            </a>
-          </div>
-          <!-- AddThis Follow END -->
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
@@ -73,21 +56,13 @@
 		fjs.parentNode.insertBefore(js, fjs);
 		};
 	load('//platform.twitter.com/widgets.js', 'tweetjs');
-	// load('https://apis.google.com/js/plusone.js', 'gplus1js'); // Checkout http://j.mp/ApDgMr for usage html for this is <div class="g-plusone" data-size="medium"></div>
-	// load('//connect.facebook.net/en_US/all.js#xfbml=1', 'fbjssdk'); // Checkout http://j.mp/wZw2xR for using open graph protorol html for this is <div class="fb-like" data-href="{{ page.url }}" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="verdana"></div>
+	load('https://apis.google.com/js/plusone.js', 'gplus1js'); // Checkout http://j.mp/ApDgMr for usage html for this is 
+	load('//connect.facebook.net/en_US/all.js#xfbml=1', 'fbjssdk'); // Checkout http://j.mp/wZw2xR for using open graph protorol html for this is 
 	}(document, 'script'));
 </script>
 <script>
 /*! A fix for the iOS orientationchange zoom bug.Script by @scottjehl, rebound by @wilto. MIT License.*/
 (function(j){var i=j.document;if(!i.querySelectorAll){return}var l=i.querySelectorAll("meta[name=viewport]")[0],a=l&&l.getAttribute("content"),h=a+", maximum-scale=1.0",d=a+", maximum-scale=10.0",g=true,c=j.orientation,k=0;if(!l){return}function f(){l.setAttribute("content",d);g=true}function b(){l.setAttribute("content",h);g=false}function e(m){c=Math.abs(j.orientation);k=Math.abs(m.gamma);if(k>8&&c===0){if(g){b()}}else{if(!g){f()}}}j.addEventListener("orientationchange",f,false);j.addEventListener("deviceorientation",e,false)})(this);
-</script>
-<!-- HitTail Code -->
-<script type="text/javascript">
-<!-- HitTail Code -->
-<script type="text/javascript">
-	(function(){ var ht = document.createElement('script');ht.async = true;
-	  ht.type='text/javascript';ht.src = '//98278.hittail.com/mlt.js';
-	  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ht, s);})();
 </script>
   {% include JB/analytics %}
 </body>
