--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -12,26 +12,7 @@
 			<div class="bd">
 				<div class="entry-content">
 					{{ content }}
-          <br˜>
-          Did you like it?
-          Follow me on twitter or give it a share:
-          <br>
-          <a href="https://twitter.com/nblumoe" class="twitter-follow-button" data-show-count="false" data-lang="en">@nblumoe folgen</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-					<div class="social">
-            <!-- AddThis Button BEGIN -->
-            <div class="addthis_toolbox addthis_default_style
-              addthis_32x32_style">
-              <a class="addthis_button_preferred_1"></a>
-              <a class="addthis_button_preferred_2"></a>
-              <a class="addthis_button_preferred_3"></a>
-              <a class="addthis_button_preferred_4"></a>
-              <a class="addthis_button_compact"></a>
-              <a class="addthis_counter addthis_bubble_style"></a>
-            </div>
-            <!-- AddThis Button END -->
-					</div>
-          <br>
+          <hr>
 					<div class="meta">
 						<p class="date-publish">
 							Published: 
@@ -53,14 +34,21 @@
 							{% include JB/tags_list %}
 						</ul>
 					</div><!-- meta -->
+
 				</div><!-- entry-content -->
 				<div class="misc-content">
-					
+          <div class="fb-like" data-href="{{ site.production_url}}{{ page.url }}" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="verdana"></div>
+          <div class="g-plusone" data-size="medium"></div>
+          <a href="https://twitter.com/nblumoe" class="twitter-follow-button" data-show-count="false" data-lang="en">@nblumoe folgen</a>
+          <a class="gplus_link" href="//plus.google.com/108620647514621362580?prsrc=3&rel=author"
+             rel="author" target="_top" style="text-decoration:none;">
+            <img src="//ssl.gstatic.com/images/icons/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;"/>
+          </a>
 					{% include JB/comments %}
 				</div><!-- misc-content -->
 				
 			</div><!-- bd -->
-			<footer class="unit-foot">
+<!--			<footer class="unit-foot">
 				<div class="unit-inner unit-foot-inner">
 					<nav class="pagination">
 						<ul>
@@ -80,7 +68,7 @@
 					</p>
 				</div>
 			</footer>
-
+      -->
 		</div><!-- content -->
 	</div><!-- unit-inner -->
 </article>
