Fixed some issues with g+ button

--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -42,7 +42,9 @@
           <a href="https://twitter.com/nblumoe" class="twitter-follow-button" data-show-count="false" data-lang="en">@nblumoe folgen</a>
           <a class="gplus_link" href="//plus.google.com/108620647514621362580?prsrc=3&rel=author"
              rel="author" target="_top" style="text-decoration:none;">
-            <img src="//ssl.gstatic.com/images/icons/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;"/>
+           <span style="display:inline-block;vertical-align:top;margin-right:0px; margin-top:0px; margin-left: 15px;">Nils</span>
+            <span style="display:inline-block;vertical-align:top;margin-right:0px; margin-top:0px;">auf</span>
+            <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:24px;height:24px;"/>
           </a>
 					{% include JB/comments %}
 				</div><!-- misc-content -->
